--- a/app/views/trips/_timeline_card.html.erb
+++ b/app/views/trips/_timeline_card.html.erb
@@ -7,8 +7,8 @@
 
         <div class="text-left flex-1">
           <p class="text-gray-500 text-xs">De</p>
-          <p class="text-2xl text-black font-bold">LIL</p>
-          <p class="text-gray-400 text-sm">Lille</p>
+          <p class="text-2xl text-black font-bold"><%= current_user&.city[0, 3].upcase || "" %></p>
+          <p class="text-gray-400 text-sm"><%= current_user&.city || "" %>, <%= current_user&.country || "" %></p>
         </div>
 
         <div class=" rounded-full p-2 bg-white z-10">
@@ -17,8 +17,8 @@
 
         <div class="text-right flex-1">
           <p class="text-gray-500 text-xs">À</p>
-          <p class="text-2xl text-black font-bold"><%= trip.name[0, 3].upcase %></p>
-          <p class="text-gray-400 text-sm"><%= trip.destination.address %></p>
+          <p class="text-2xl text-black font-bold"><%= trip.destination&.city[0, 3].upcase %></p>
+          <p class="text-gray-400 text-sm"><%= trip.destination&.city %>, <%= trip.destination&.country %></p>
         </div>
       </div>
 
