--- a/app/views/trips/_countup.html.erb
+++ b/app/views/trips/_countup.html.erb
@@ -1,28 +1,36 @@
 <div
   id="countup"
-  class="flex flex-col items-center gap-4 text-white mt-3"
+  class="relative flex flex-col items-center gap-4 text-white pt-6"
   data-controller="countup"
-  data-countup-start-date-value="<%= start %>">
-  <div class="grid auto-cols-max grid-flow-col gap-3 text-center">
-    <div class="flex flex-col items-center">
-      <span data-countup-target="years" class="text-3xl font-playfair font-bold min-w-[3ch]">0</span>
-      <span class="text-xs uppercase">années</span>
+  data-countdown-start-date-value="<%= start %>">
+  <div class="grid auto-cols-max grid-flow-col gap-1 text-center">
+
+    <div class="bg-neutral rounded-box text-neutral-content flex flex-col p-2 shadow-lg">
+      <span class=" font-mono text-5xl text-white">
+        <span data-countdown-target="days"></span>
+      </span>
+      jours
     </div>
-    <div class="flex flex-col items-center">
-      <span data-countup-target="days" class="text-3xl font-playfair font-bold min-w-[3ch]">0</span>
-      <span class="text-xs uppercase">jours</span>
+
+    <div class="bg-neutral rounded-box text-neutral-content flex flex-col p-2 shadow-lg">
+      <span class=" font-mono text-5xl text-white">
+        <span data-countdown-target="hours"></span>
+      </span>
+      heures
     </div>
-    <div class="flex flex-col items-center">
-      <span data-countup-target="hours" class="text-3xl font-playfair font-bold min-w-[2ch]">00</span>
-      <span class="text-xs uppercase">heures</span>
+
+    <div class="bg-neutral rounded-box text-neutral-content flex flex-col p-2 shadow-lg">
+      <span class=" font-mono text-5xl text-white">
+        <span data-countdown-target="minutes"></span>
+      </span>
+      min
     </div>
-    <div class="flex flex-col items-center">
-      <span data-countup-target="minutes" class="text-3xl font-playfair font-bold min-w-[2ch]">00</span>
-      <span class="text-xs uppercase">min</span>
-    </div>
-    <div class="flex flex-col items-center">
-      <span data-countup-target="seconds" class="text-3xl font-playfair font-bold min-w-[2ch]">00</span>
-      <span class="text-xs uppercase">sec</span>
+
+    <div class="bg-neutral rounded-box text-neutral-content flex flex-col p-2 shadow-lg">
+      <span class=" font-mono text-5xl text-white">
+        <span data-countdown-target="seconds"></span>
+      </span>
+      sec
     </div>
   </div>
 </div>
