--- a/app/views/trips/_curr_trip.html.erb
+++ b/app/views/trips/_curr_trip.html.erb
@@ -8,9 +8,11 @@
   <div class="absolute inset-0 bg-gradient-to-t from-black/100 via-black/20 to-black/0"></div>
 
   <div class="relative bottom-0 left-0 right-0 p-4 text-white">
-    <p class="text-sm flex items-center space-x-2 mt-2">
+
+    <p class="text-sm flex items-center gap-2">
       <span class="w-2 h-2 rounded-full bg-green-500"></span><span>En voyage actuellement</span>
     </p>
+
     <h1 class="text-3xl font-bold font-playfair"><%= trip.name.capitalize() %></h1>
     <div class="flex justify-between mt-2">
       <div class="flex flex-col items-center">
