--- a/app/views/trips/_curr_trip.html.erb
+++ b/app/views/trips/_curr_trip.html.erb
@@ -10,7 +10,8 @@
   <div class="relative bottom-0 left-0 right-0 p-4 text-white">
 
     <p class="text-sm flex items-center gap-2">
-      <span class="w-2 h-2 rounded-full bg-green-500"></span><span>En voyage actuellement</span>
+      <span class="w-2 h-2 rounded-full bg-green-500"></span>
+      <span class="shadow-sm">En voyage actuellement</span>
     </p>
 
     <h1 class="text-3xl font-bold font-playfair"><%= trip.name.capitalize() %></h1>
