--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -40,32 +40,34 @@
     </div>
   </div>
 
-  <div class="bg-white text-gray-800 flex-1">
-    <ul class="divide-y divide-gray-200">
-      <li class="flex items-center justify-between px-6 py-4">
-        <div class="flex items-center space-x-4">
-          <span class="icon">add_circle</span>
-          <%= link_to "Créer un voyage", new_trip_path %>
-        </div>
-      </li>
-      <li class="flex items-center justify-between px-6 py-4">
-        <div class="flex items-center space-x-4">
-          <span class="icon">draw</span>
-          <%= link_to "Modifier mon profil", edit_profile_path(current_user) %>
-        </div>
-      </li>
-      <li class="flex items-center justify-between px-6 py-4">
-        <div class="flex items-center space-x-4">
-          <span class="icon">edit</span>
-          <%= link_to "Modifier mon mots de passe", edit_user_registration_path(current_user) %>
-        </div>
-      </li>
-      <li class="flex items-center justify-between px-6 py-4">
-        <div class="flex items-center space-x-4">
-          <span class="icon">logout</span>
-          <%= link_to "Se déconnecter", destroy_user_session_path, data: {turbo_method: :delete} %>
-        </div>
-      </li>
-    </ul>
-  </div>
+  <% if current_user %>
+    <div class="bg-white text-gray-800 flex-1 text-sm">
+      <ul class="divide-y divide-gray-200">
+        <li class="flex items-center justify-between px-6 py-4">
+          <div class="flex items-center space-x-4">
+            <span class="icon">add_circle</span>
+            <%= link_to "Créer un voyage", new_trip_path %>
+          </div>
+        </li>
+        <li class="flex items-center justify-between px-6 py-4">
+          <div class="flex items-center space-x-4">
+            <span class="icon">draw</span>
+            <%= link_to "Modifier mon profil", edit_profile_path(current_user) %>
+          </div>
+        </li>
+        <li class="flex items-center justify-between px-6 py-4">
+          <div class="flex items-center space-x-4">
+            <span class="icon">edit</span>
+            <%= link_to "Modifier mon mot de passe", edit_user_registration_path(current_user) %>
+          </div>
+        </li>
+        <li class="flex items-center justify-between px-6 py-4">
+          <div class="flex items-center space-x-4">
+            <span class="icon">logout</span>
+            <%= link_to "Se déconnecter", destroy_user_session_path, data: {turbo_method: :delete} %>
+          </div>
+        </li>
+      </ul>
+    </div>
+  <% end %>
 </div>
