--- a/app/views/trips/_trip_hero.html.erb
+++ b/app/views/trips/_trip_hero.html.erb
@@ -1,18 +1,30 @@
+<% if curr_trip.present? %>
+  <% trip = curr_trip %>
+<% elsif next_trip.present? %>
+  <% trip = next_trip %>
+<% else %>
+  <% trip = last_trip %>
+<% end %>
+
 <div class="next-trip-container sticky z-10 w-full transition-all duration-200 bg-cover bg-center overflow-hidden pb-5">
   <% if trip.destination.photo.present? %>
     <%= cl_image_tag trip.destination.photo.key, class: "absolute inset-0 h-full w-full object-cover" %>
   <% else %>
     <%= image_tag 'rome.jpg', class: "absolute inset-0 h-full w-full object-cover" %>
   <% end %>
-
   <div class="absolute inset-0 bg-gradient-to-t from-black/100 via-black/20 to-black/0"></div>
 
-  <div class="relative bottom-0 left-0 right-0 p-4 text-white">
-
-    <p class="text-sm flex items-center gap-2">
-      <span class="w-2 h-2 rounded-full bg-green-500"></span>
-      <span class="shadow-sm">En voyage actuellement</span>
-    </p>
+  <div class="relative flex flex-col bottom-0 left-0 right-0 p-4 text-white">
+    <% if curr_trip.present? %>
+      <p class="text-xs flex items-center gap-2 bg-orange-600 w-fit py-1 px-2 rounded-full mb-1">
+        <span class="w-2 h-2 rounded-full bg-green-500"></span>
+        <span class="shadow-sm">En voyage actuellement</span>
+      </p>
+    <% elsif next_trip.present? %>
+      <%= render "countdown", start: trip&.start_date || "" %>
+    <% else %>
+      <%= render "countup", start: trip&.start_date || "" %>
+    <% end %>
 
     <h1 class="text-3xl font-bold font-playfair"><%= trip.name.capitalize() %></h1>
     <div class="flex justify-between mt-2">
@@ -24,14 +36,14 @@
         <span class="text-sm font-semibold"><%= (trip.end_date - trip.start_date).to_i %></span>
         <span class="text-xs text-gray-300">Jours</span>
       </div>
-    <div class="flex flex-col items-center">
-      <span class="text-sm font-semibold"><%= trip&.total_kilometers(current_user) || 0 %></span>
-      <span class="text-xs text-gray-300">Kilomètres</span>
-    </div>
-    <div class="flex flex-col items-center">
-      <span class="text-sm font-semibold"><%= trip.activities.count %></span>
-      <span class="text-xs text-gray-300">Activités</span>
+      <div class="flex flex-col items-center">
+        <span class="text-sm font-semibold"><%= trip&.total_kilometers(current_user) || 0 %></span>
+        <span class="text-xs text-gray-300">Kilomètres</span>
+      </div>
+      <div class="flex flex-col items-center">
+        <span class="text-sm font-semibold"><%= trip.activities.count %></span>
+        <span class="text-xs text-gray-300">Activités</span>
+      </div>
     </div>
   </div>
-</div>
 </div>
