--- a/app/views/trips/_timeline_card.html.erb
+++ b/app/views/trips/_timeline_card.html.erb
@@ -7,7 +7,7 @@
 
         <div class="text-left flex-1">
           <p class="text-gray-500 text-xs">De</p>
-          <p class="text-2xl text-black font-bold"><%= current_user&.city[0, 3].upcase || "" %></p>
+          <p class="text-2xl text-black font-bold"><%= current_user&.city&.slice(0, 3)&.upcase || "" %></p>
           <p class="text-gray-400 text-sm"><%= current_user&.city || "" %>, <%= current_user&.country || "" %></p>
         </div>
 
@@ -17,7 +17,7 @@
 
         <div class="text-right flex-1">
           <p class="text-gray-500 text-xs">À</p>
-          <p class="text-2xl text-black font-bold"><%= trip.destination&.city[0, 3].upcase %></p>
+          <p class="text-2xl text-black font-bold"><%= trip.destination&.city&.slice(0, 3)&.upcase || "" %></p>
           <p class="text-gray-400 text-sm"><%= trip.destination&.city %>, <%= trip.destination&.country %></p>
         </div>
       </div>
