--- a/app/views/trips/_search_result.html.erb
+++ b/app/views/trips/_search_result.html.erb
@@ -1,10 +1,10 @@
-<div  class="fixed inset-0 items-center justify-center z-50 h-screen w-screen">
+<div  class="fixed inset-0 items-center justify-center z-50 h-screen w-screen bg-black">
    <% if trip.destination.photo.present? %>
       <%= cl_image_tag trip.destination.photo.key, class: "absolute inset-0 h-full w-full object-cover" %>
     <% else %>
       <%= image_tag 'rome.jpg', class: "absolute inset-0 h-full w-full object-cover" %>
     <% end %>
-  <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
+  <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/50 to-transparent"></div>
 
   <div class="flex flex-col justify-center items-center z-10 h-screen w-screen">
     <div class="relative text-white px-12">
