--- a/app/views/trips/_statistics.html.erb
+++ b/app/views/trips/_statistics.html.erb
@@ -1,27 +1,27 @@
 <div class="relative py-8">
   <div class="flex justify-around text-white px-3">
 
-    <div class="flex flex-col items-start border-r border-r-white border-opacity-30 flex-1 px-2">
+    <div class="flex flex-col items-start border-r border-r-white border-opacity-30 flex-1 shrink px-2">
       <span class="text-sm text-center uppercase text-gray-300">Voyages</span>
-      <span class="text-xl font-bold mt-1"><%= current_user&.total_travels || "0" %></span>
+      <span class="text-md font-bold mt-1"><%= current_user&.total_travels || "0" %></span>
       <span class="text-xs">effectué(s)</span>
     </div>
 
-    <div class="flex flex-col items-start border-r border-r-white border-opacity-30 flex-1 px-2">
+    <div class="flex flex-col items-start border-r border-r-white border-opacity-30 flex-1 shrink px-2">
       <span class="text-sm text-center uppercase text-gray-300">Ratio</span>
-      <span class="text-xl font-bold mt-1"><%= current_user&.ratio || "0" %><span class="text-xs"> %</span></span>
+      <span class="text-md font-bold mt-1"><%= current_user&.ratio || "0" %><span class="text-xs"> %</span></span>
       <span class="text-xs">du monde</span>
     </div>
 
-    <div class="flex flex-col items-start border-r border-r-white border-opacity-30 flex-1 px-2">
+    <div class="flex flex-col items-start border-r border-r-white border-opacity-30 flex-1 shrink-0 px-2">
       <span class="text-sm text-center uppercase text-gray-300">Distance</span>
-      <span class="text-xl font-bold mt-1"><%= current_user&.total_kilometers || "0" %><span class="text-xs"> km</span></span>
+      <span class="text-md font-bold mt-1 whitespace-nowrap"><%= current_user&.total_kilometers || "0" %><span class="text-xs"> km</span></span>
       <span class="text-xs">parcourus</span>
     </div>
 
-    <div class="flex flex-col items-start flex-1 px-1">
+    <div class="flex flex-col items-start flex-1 shrink px-2">
       <span class="text-sm text-center uppercase text-gray-300">Cumul</span>
-      <span class="text-xl font-bold mt-1"><%= current_user&.total_days || "0" %><span class="text-xs"> j</span></span>
+      <span class="text-md font-bold mt-1"><%= current_user&.total_days || "0" %><span class="text-xs"> j</span></span>
       <span class="text-xs">en voyage</span>
     </div>
 
