--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,15 +6,15 @@
         <div class="form-inputs space-y-4">
           <%= f.input :first_name,
                       label: false,
-                      placeholder: "First name",
+                      placeholder: "Prénom",
                       input_html: { class: "bg-gray-800 text-white placeholder:italic placeholder:text-slate-400 block w-full border border-white rounded-md py-3 shadow-sm focus:outline-none focus:border-orange-500 focus:ring-orange-600 focus:ring-1 sm:text-sm" } %>
           <%= f.input :last_name,
                       label: false,
-                      placeholder: "Last name",
+                      placeholder: "Nom",
                       input_html: { class: "bg-gray-800 text-white placeholder:italic placeholder:text-slate-400 block w-full border border-white rounded-md py-3 shadow-sm focus:outline-none focus:border-orange-500 focus:ring-orange-600 focus:ring-1 sm:text-sm" } %>
           <%= f.input :username,
                       label: false,
-                      placeholder: "Username",
+                      placeholder: "Pseudo",
                       input_html: { class: "bg-gray-800 text-white placeholder:italic placeholder:text-slate-400 block w-full border border-white rounded-md py-3 shadow-sm focus:outline-none focus:border-orange-500 focus:ring-orange-600 focus:ring-1 sm:text-sm" } %>
           <%= f.input :email,
                       label: false,
@@ -23,7 +23,7 @@
           <div class="relative">
             <%= f.input :password,
                         label: false,
-                        placeholder: "Password",
+                        placeholder: "Mot de passe",
                         input_html: { class: "bg-gray-800 text-white placeholder:italic placeholder:text-slate-400 block w-full border border-white rounded-md py-3 shadow-sm focus:outline-none focus:border-orange-500 focus:ring-orange-600 focus:ring-1 sm:text-sm", autocomplete: "new-password" } %>
             <span class="absolute right-4 top-3 cursor-pointer text-gray-500 hover:text-white">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
