--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,23 +1,20 @@
-<div class="max-w-md m-4 bg-white p-6 rounded-lg shadow-md">
-  <h3 class="text-center text-black ">Modifier mon profil</h3>
-  <%= simple_form_for @user, url: profile_path(@user), method: :patch, html: { class: "space-y-4" } do |f| %>
-    <div>
-      <%= f.input :first_name, label: false, input_html: { class: "w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:outline-none" }, placeholder: "First Name" %>
+<div class="relative h-screen">
+  <div class="container-login max-w-md mx-auto p-6">
+    <h3 class="text-xl font-bold text-left text-white mb-6 mt-safe-offset-20">Modifier mon profil</h3>
+    <%= simple_form_for @user, url: profile_path(@user), method: :patch, html: { class: "space-y-4" } do |f| %>
+      <div class="form-inputs space-y-4">
+        <%= f.input :first_name, label: "Prénom", input_html: { class: "bg-gray-800 text-white placeholder:italic placeholder:text-slate-400 block w-full border border-white rounded-md py-3 shadow-sm focus:outline-none focus:border-orange-500 focus:ring-orange-600 focus:ring-1 sm:text-sm" }, placeholder: "First Name" %>
+        <%= f.input :last_name, label: "Nom", input_html: { class: "bg-gray-800 text-white placeholder:italic placeholder:text-slate-400 block w-full border border-white rounded-md py-3 shadow-sm focus:outline-none focus:border-orange-500 focus:ring-orange-600 focus:ring-1 sm:text-sm"}, placeholder: "Last Name" %>
+        <%= f.input :username, label: "Pseudonyme", input_html: { class: "bg-gray-800 text-white placeholder:italic placeholder:text-slate-400 block w-full border border-white rounded-md py-3 shadow-sm focus:outline-none focus:border-orange-500 focus:ring-orange-600 focus:ring-1 sm:text-sm"}, placeholder: "Username" %>
+        <%= f.input :address, label: "Adresse", input_html: { class: "bg-gray-800 text-white placeholder:italic placeholder:text-slate-400 block w-full border border-white rounded-md py-3 shadow-sm focus:outline-none focus:border-orange-500 focus:ring-orange-600 focus:ring-1 sm:text-sm"}, placeholder: "Address" %>
+        <%= f.input :photo, label: "Photo", input_html: { class: "bg-gray-800 text-white placeholder:italic placeholder:text-slate-400 block w-full border border-white rounded-md py-3 shadow-sm focus:outline-none focus:border-orange-500 focus:ring-orange-600 focus:ring-1 sm:text-sm"} %>
+        <%= f.submit "Sauvegarder", class:"w-full bg-orange-500 text-white py-3 px-6 rounded-lg text-lg font-bold active:bg-orange-§00" %>
+      </div>
+    <% end %>
+
+    <hr class="my-3">
+    <div class="mt-4 text-center">
+      <%= link_to "Retour", :back, class:"text-white underline", data: { turbo_frame: "_top" } %>
     </div>
-    <div>
-      <%= f.input :last_name, label: false, input_html: { class: "w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:outline-none" }, placeholder: "Last Name" %>
-    </div>
-    <div>
-      <%= f.input :username, label: false, input_html: { class: "w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:outline-none" }, placeholder: "Username" %>
-    </div>
-    <div>
-      <%= f.input :address, label: false, input_html: { class: "w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:outline-none" }, placeholder: "Address" %>
-    </div>
-    <div>
-      <%= f.input :photo, label: false, input_html: { class: "w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:outline-none" } %>
-    </div>
-    <div>
-      <%= f.submit "Save", class: "w-full bg-orange-500 text-white py-3 rounded-lg font-semibold hover:bg-orange-600 focus:ring-4 focus:ring-indigo-300 focus:outline-none" %>
-    </div>
-  <% end %>
+  </div>
 </div>
