--- a/app/views/trips/_search_result.html.erb
+++ b/app/views/trips/_search_result.html.erb
@@ -18,7 +18,7 @@
 
       <div class="flex items-center space-x-2 text-sm text-gray-300">
         <span class="icon">explore</span>
-        <span><%= trip.destination.address %></span>
+        <span><%= trip.destination.country %></span>
       </div>
 
       <!-- Exploration stats -->
