--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -5,7 +5,7 @@
   </button>
 
   <!-- Section image avec retour -->
-  <div class="relative w-full h-1/2 bg-gray-200">
+  <div class="sticky top-0 w-full h-1/2 bg-gray-200">
     <!-- Image principale -->
     <div class="relative w-full h-full">
       <% if @activity.photos.first.present? %>
@@ -131,42 +131,42 @@
     <div class="mt-6" data-controller="tabs">
       <!-- Navigation des onglets -->
       <div role="tablist" class="tabs tabs-bordered px-6">
-        <a class="tab text-gray-400 text-white tab-active !border-white" data-action="click->tabs#switchTab" data-tabs-target="tabActivity" data-tab-name="description">Description</a>
+        <a class="tab text-white tab-active !border-white" data-action="click->tabs#switchTab" data-tabs-target="tabActivity" data-tab-name="description">Description</a>
         <a class="tab text-gray-400" data-action="click->tabs#switchTab" data-tabs-target="tabActivity" data-tab-name="horaires">Horaires</a>
         <a class="tab text-gray-400" data-action="click->tabs#switchTab" data-tabs-target="tabActivity" data-tab-name="wiki">Wiki</a>
         <a class="tab text-gray-400" data-action="click->tabs#switchTab" data-tabs-target="tabActivity" data-tab-name="avis">Avis</a>
       </div>
 
-    <div data-controller="edit-form" class="px-6 mt-6">
+      <div data-controller="edit-form" class="px-6 mt-6">
         <!-- Contenu de l'onglet Description -->
-    <div data-tabs-target="content" data-tab-name="description" >
-      <div data-edit-target="form">
-        <h3 class="text-lg font-semibold text-gray-100 old-value">Description <p class="icon" data-action="click->edit-form#display">Edit</p></h3>
-        <div class="hidden new-value">
-          <%= simple_form_for(@activity, url: :activity, method: :patch) do |f| %>
-            <%= f.input :description, label: false, input_html:{class:"text-black"} %>
-            <%= f.submit class:"btn"%>
-          <% end %>
+        <div data-tabs-target="content" data-tab-name="description" class="pb-safe-offset-24" >
+          <div data-edit-target="form">
+            <h3 class="text-lg font-semibold text-gray-100 old-value">Description <p class="icon" data-action="click->edit-form#display">Edit</p></h3>
+            <div class="hidden new-value">
+              <%= simple_form_for(@activity, url: :activity, method: :patch) do |f| %>
+                <%= f.input :description, label: false, input_html:{class:"text-black"} %>
+                <%= f.submit class:"btn"%>
+              <% end %>
+            </div>
+          </div>
+          <div data-controller="read-more" data-read-more-more-text-value="Voir plus" data-read-more-less-text-value="Voir moins">
+            <p class="my-content mt-2 text-sm text-gray-400" data-read-more-target="content">
+              <%= @activity.description%>
+            </p>
+            <button class="text-gray-500 text-sm font-bold" data-action="read-more#toggle">Voir plus</button>
+          </div>
         </div>
-      </div>
-      <div data-controller="read-more" data-read-more-more-text-value="Voir plus" data-read-more-less-text-value="Voir moins">
-        <p class="my-content mt-2 text-sm text-gray-400" data-read-more-target="content">
-          <%= @activity.description%>
-        </p>
-        <button class="text-gray-500 text-sm font-bold" data-action="read-more#toggle">Voir plus</button>
-      </div>
-    </div>
-
 
         <!-- Contenu de l'onglet Horaires -->
-        <div data-tabs-target="content" data-tab-name="horaires" class="hidden ">
+        <div data-tabs-target="content" data-tab-name="horaires" class="hidden pb-safe-offset-24" >
           <h3 class="text-lg font-semibold text-gray-200">Horaires</h3>
           <%@activity.opening.each do |slot| %>
             <p class="text-sm text-gray-400 mt-2"><%= slot %></p>
           <% end %>
         </div>
+
         <!-- Contenu de l'onglet Wiki -->
-        <div data-tabs-target="content" data-tab-name="wiki" class="hidden">
+        <div data-tabs-target="content" data-tab-name="wiki" class="hidden pb-safe-offset-24" >
           <h3 class="text-lg font-semibold text-gray-200">Wiki</h3>
           <p class="text-sm text-gray-400 mt-2">
             <%= @activity.wiki %>
@@ -174,7 +174,7 @@
         </div>
 
         <!-- Contenu de l'onglet Avis -->
-        <div data-tabs-target="content" data-tab-name="avis" class="hidden">
+        <div data-tabs-target="content" data-tab-name="avis" class="hidden pb-safe-offset-24" >
           <h3 class="text-lg font-semibold text-gray-200">Avis</h3>
           <%@activity.reviews.each do |review| %>
             <div>
@@ -185,19 +185,20 @@
             </div>
           <% end %>
         </div>
-      <div class="flex w-full px-4  space-x-4 fixed bottom-4 left-0">
-          <a class="flex-1" href="<%= @activity.website_url %>" target="_blank">
-            <button class="w-full bg-orange-600 text-white py-2 px-6 rounded-md text-sm active:bg-orange-700 h-12  flex items-center justify-center">
-              Site internet
-            </button>
-          </a>
-          <a href="<%= @activity.direction %>" target="_blank">
-            <button class=" w-full bg-white text-orange-600 py-2 px-6 rounded-md text-sm active:bg-orange-700 h-12 flex items-center justify-center">
-              <div class="icon">near_me</div>
-            </button>
-          </a>
       </div>
+    </div>
 
-      </div>
-      </div>
-      </div>
+    <div class="flex w-full px-4  space-x-4 fixed bottom-safe-offset-4 left-safe-offset-0 right-safe-offset-0">
+      <a class="flex-1" href="<%= @activity.website_url %>" target="_blank">
+        <button class="w-full bg-orange-600 text-white py-2 px-6 rounded-md text-sm active:bg-orange-700 h-12  flex items-center justify-center">
+          Site internet
+        </button>
+      </a>
+      <a href="<%= @activity.direction %>" target="_blank">
+        <button class=" w-full bg-white text-orange-600 py-2 px-6 rounded-md text-sm active:bg-orange-700 h-12 flex items-center justify-center">
+          <div class="icon">near_me</div>
+        </button>
+      </a>
+    </div>
+  </div>
+</div>
