--- a/app/views/searches/_loading.html.erb
+++ b/app/views/searches/_loading.html.erb
@@ -3,7 +3,7 @@
     <p class="px-4 text-center text-white mt-4">Votre destination :</p>
     <p class="text-white text-4xl font-bold font-playfair"><%= search.destination %></p>
     <p class="px-4 text-center text-white mt-4">Création de votre programme en cours</p>
-    <span class="loading loading-ring loading-lg text-white"></span>
+    <span class="loading loading-ring loading-lg text-white mt-4"></span>
     <div data-controller="loading" data-loading-search-id="<%= search.id %>"></div>
   </div>
 <% end %>
