--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,35 +1,13 @@
 <div class="h-screen" data-controller="toggle">
   <!-- Bouton Toggle -->
-
-  <button class="fixed bottom-4 right-4 z-30 bg-orange-500 text-white p-3 rounded-full shadow-lg icon"
-          data-action="click->toggle#toggleView"
-          data-view="map">
+  <%= link_to map_view_path(@trip),
+    data: { turbo_frame: "modal-frame" },
+    class: "fixed bottom-safe-offset-4 right-safe-offset-4 z-30 bg-orange-500 text-white p-3 rounded-full shadow-lg icon" do %>
     map
-  </button>
-  <button onclick="new_activity_modal.showModal()" class="fixed bottom-20 right-4 z-30 bg-orange-500 text-white p-3 rounded-full shadow-lg icon" > Add</button>
+  <% end %>
+
+  <button onclick="new_activity_modal.showModal()" class="fixed bottom-safe-offset-20 right-safe-offset-4 z-30 bg-orange-500 text-white p-3 rounded-full shadow-lg icon" > Add</button>
   <%= render "activities/new_activity_modal"%>
-
-  <!-- Vue actuelle avec la carte et le carrousel -->
-  <div class="map fixed inset-0 z-[25] h-screen w-screen bg-black overflow-hidden rounded-t-2xl translate-y-full transition-transform duration-500"
-    data-toggle-target="mapView">
-    <button class="absolute p-4 right-0 z-[25]" data-action="click->toggle#toggleView">
-      <p class="icon icon-200 drop-shadow-xl text-4xl text-black">close</p>
-    </button>
-
-    <div id="map" class="w-screen h-screen"
-      data-controller="map"
-      data-map-api-key-value='<%= ENV["MAPBOX_API_KEY"] %>'
-      data-map-markers-value='<%= raw @markers.to_json %>'>
-    </div>
-
-    <div class="absolute bottom-16 left-0 right-0 z-10 overflow-x-auto" data-controller="carrousel">
-      <div class="carousel carousel-center rounded-box space-x-4 p-4" data-carrousel-target="container">
-        <% @activities.each_with_index do |activity, index| %>
-          <%= render "carrousel_item", activity: activity, index: index %>
-        <% end %>
-      </div>
-    </div>
-  </div>
 
   <!-- Vue agenda -->
   <div data-toggle-target="agendaView">
@@ -74,7 +52,9 @@
       </div>
 
       <!-- Timeline Section -->
-      <%= render 'timeline_activities', day_activities: @day_activities %>
+      <div data-controller="turbo-frame-reloader">
+        <%= render 'timeline_activities', day_activities: @day_activities %>
+      </div>
     </div>
   </div>
 </div>
