--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -7,13 +7,13 @@
     <%= f.full_error :reset_password_token %>
     <div class="form-inputs">
       <%= f.input :password,
-                label: "New password",
+                label: false,
                 required: true,
                 autofocus: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
                 input_html: { autocomplete: "new-password" } %>
       <%= f.input :password_confirmation,
-                label: "Confirm your new password",
+                label: false,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
     </div>
