--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,28 +2,40 @@
   <div class="container-login max-w-md mx-auto p-6">
     <h1 class="text-4xl font-bold text-center text-white mb-6 mt-safe-offset-20">wander</h1>
     <div class="form-login">
+
+                  <%# <div class="relative">
+                      <input type="text" id="floating_outlined"
+                          class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 bg-transparent rounded-lg border border-gray-300 appearance-none   focus:outline-none focus:ring-0 focus:border-blue-600 peer"
+                          placeholder=" " />
+                      <label for="floating_outlined"
+                          class="absolute text-sm text-gray-500  duration-300 transform-translate-y-4 scale-75 top-2 z-10 origin-[0] bg-gray-800  px-2 peer-focus:px-2 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto start-1 rounded-md">Floating
+                          outlined</label>
+                  </div> %>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <div class="form-inputs space-y-4">
+
           <%= f.input :first_name,
-                      label: false,
-                      placeholder: "Prénom",
-                      input_html: { class: "bg-gray-800 text-white placeholder:italic placeholder:text-slate-400 block w-full border border-white rounded-md py-3 shadow-sm focus:outline-none focus:border-orange-500 focus:ring-orange-600 focus:ring-1 sm:text-sm" } %>
+                      label: :Prénom,
+                      placeholder:" ",
+                      class:"",
+                      label_html: { class: '' }%>
+
           <%= f.input :last_name,
-                      label: false,
-                      placeholder: "Nom",
+                      label: :Nom,
+                      placeholder:" ",
                       input_html: { class: "bg-gray-800 text-white placeholder:italic placeholder:text-slate-400 block w-full border border-white rounded-md py-3 shadow-sm focus:outline-none focus:border-orange-500 focus:ring-orange-600 focus:ring-1 sm:text-sm" } %>
           <%= f.input :username,
-                      label: false,
-                      placeholder: "Pseudo",
+                      label: :Pseudo,
+                      placeholder:" ",
                       input_html: { class: "bg-gray-800 text-white placeholder:italic placeholder:text-slate-400 block w-full border border-white rounded-md py-3 shadow-sm focus:outline-none focus:border-orange-500 focus:ring-orange-600 focus:ring-1 sm:text-sm" } %>
           <%= f.input :email,
-                      label: false,
-                      placeholder: "Email",
+                      label: :Email,
+                      placeholder:" ",
                       input_html: { class: "bg-gray-800 text-white placeholder:italic placeholder:text-slate-400 block w-full border border-white rounded-md py-3 shadow-sm focus:outline-none focus:border-orange-500 focus:ring-orange-600 focus:ring-1 sm:text-sm", autocomplete: "email" } %>
           <div class="relative">
             <%= f.input :password,
-                        label: false,
-                        placeholder: "Mot de passe",
+                        label: :"Mot de passe",
+                        placeholder:" ",
                         input_html: { class: "bg-gray-800 text-white placeholder:italic placeholder:text-slate-400 block w-full border border-white rounded-md py-3 shadow-sm focus:outline-none focus:border-orange-500 focus:ring-orange-600 focus:ring-1 sm:text-sm", autocomplete: "new-password" } %>
             <span class="absolute right-4 top-3 cursor-pointer text-gray-500 hover:text-white">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -33,8 +45,8 @@
             </span>
           </div>
           <%= f.input :password_confirmation,
-                      label: false,
-                      placeholder: "Confirm Password",
+                      label: :"Confirmer le mot de passe",
+                      placeholder:" ",
                       input_html: { class: "bg-gray-800 text-white placeholder:italic placeholder:text-slate-400 block w-full border border-white rounded-md py-3 shadow-sm focus:outline-none focus:border-orange-500 focus:ring-orange-600 focus:ring-1 sm:text-sm", autocomplete: "new-password" } %>
         </div>
 
@@ -43,6 +55,11 @@
         </div>
       <% end %>
     </div>
+
+
+
+
+
 
     <div class="mt-4 text-center">
       <%= render "devise/shared/links" %>
